newtc/src/featurez/tokens/snapshots/tests__ampersand_ampersand_ampersand.snap
---
created: "2019-07-30T14:48:25.070765Z"
creator: insta@0.8.1
source: newtc/src/featurez/tokens/tests.rs
expression: document
---
&&&

===

AmpersandAmpersand[2]
Ampersand[1]
EndOfFile[0]
