newtc/src/featurez/tokens/snapshots/tests__identifiers_can_have_underscores_in_middle.snap
---
created: "2019-07-30T14:48:25.120635Z"
creator: insta@0.8.1
source: newtc/src/featurez/tokens/tests.rs
expression: document
---
foo_123

===

Identifier[7]
EndOfFile[0]
