newtc/src/featurez/tokens/snapshots/tests__identifiers_can_not_be_just_underscores.snap
---
created: "2019-07-30T14:48:25.120644Z"
creator: insta@0.8.1
source: newtc/src/featurez/tokens/tests.rs
expression: document
---
_

===

UnderScore[1]
EndOfFile[0]
