newtc/src/featurez/tokens/snapshots/tests__less_equals_equals.snap
---
created: "2019-07-30T14:48:25.147079Z"
creator: insta@0.8.1
source: newtc/src/featurez/tokens/tests.rs
expression: document
---
<==

===

LessEquals[2]
Equals[1]
EndOfFile[0]
